# pybind_examples

./: .gitignore  .gitmodules  README.md  links.txt
cpp_only/: CMakeLists.txt  MANIFEST.in  setup.py
cpp_only/src/: main_pyb.cpp  special.cpp  special.hpp
cpp_submodule/: CMakeLists.txt  setup.py
cpp_submodule/cpp/: CMakeLists.txt
cpp_submodule/cpp/src/: main_pyb.cpp
cpp_submodule/foo/: __init__.py  special.py
cpp_submodule/src/: special_pyb.cpp
hpc_example/: CMakeLists.txt  setup.py
hpc_example/dot_product/: __init__.py  dot_product.py
hpc_example/examples/: all.py  bench.py  mpi_bench.py  mpi_ex.py
hpc_example/src/: dot_product.cpp  dot_product.hpp  dot_product_gpu.cu  dot_product_pyb.cpp  main_pyb.cpp
misc/: eigen_tensor.cpp  interp.cpp  interp_perf.py
misc/fft/: fft.cpp  performance.py
misc/interpolation/: performance.py
misc/playground/: Makefile  play.cpp  test.py
